prepare other models

--- a/notebooks/prepare_other_feat.ipynb
+++ b/notebooks/prepare_other_feat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,21 +49,44 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
+    "from scipy.ndimage import laplace, sobel\n",
     "\n",
     "def get_img_feat(img):\n",
     "    feats = [np.mean(img),np.std(img),np.median(img),np.max(img),np.min(img)]\n",
+    "    \n",
     "    return feats\n",
     "    \n",
     "def get_other_feat(df):\n",
     "    feats = []\n",
     "    for i, row in df.iterrows():\n",
+    "        tmp_feat = []\n",
     "        img1 = np.array(row['band_1']).reshape(75, 75).astype('float32')\n",
     "        img2 = np.array(row['band_2']).reshape(75, 75).astype('float32')\n",
     "        if row['inc_angle'] == 'na':\n",
     "            ang = 0\n",
     "        else:\n",
     "            ang = float(row['inc_angle'])\n",
-    "        feats.append(get_img_feat(img1)+get_img_feat(img2)+[ang])\n",
+    "        tmp_feat = get_img_feat(img1)+get_img_feat(img2)+[ang]\n",
+    "        \n",
+    "#         lap_1 = laplace(img1, mode='reflect', cval=0.0)\n",
+    "#         lap_2 = laplace(img1, mode='reflect', cval=0.0)\n",
+    "#         tmp_feat = tmp_feat + get_img_feat(lap_1) + get_img_feat(lap_2)\n",
+    "        \n",
+    "#         sob1 = sobel(img1, axis=0, mode='reflect', cval=0.0)\n",
+    "#         sob2 = sobel(img1, axis=1, mode='reflect', cval=0.0)\n",
+    "#         sob3 = sobel(img2, axis=0, mode='reflect', cval=0.0)\n",
+    "#         sob4 = sobel(img2, axis=1, mode='reflect', cval=0.0)\n",
+    "#         tmp_feat = tmp_feat + get_img_feat(sob1) + get_img_feat(sob2) + get_img_feat(sob3) + get_img_feat(sob4)\n",
+    "        \n",
+    "#         hist = list(np.histogram(img1, bins=20)[0])\n",
+    "#         tmp_feat += hist\n",
+    "#         tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "        \n",
+    "#         hist = list(np.histogram(img2, bins=20)[0])\n",
+    "#         tmp_feat += hist\n",
+    "#         tmp_feat += [np.std(hist), np.max(hist), np.median(hist), (np.max(hist) - np.median(hist))]\n",
+    "        feats.append(tmp_feat)\n",
+    "        \n",
     "    return np.array(feats).astype('float32')\n",
     "\n",
     "train_feat = get_other_feat(train_df)\n",
@@ -72,38 +95,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ -2.79110451e+01   2.76453733e+00  -2.78799210e+01  -2.13148996e-01\n",
-      "   -3.82113762e+01  -2.99101162e+01   2.38128400e+00  -3.00078468e+01\n",
-      "   -1.12521534e+01  -4.11359177e+01   4.39239006e+01]\n",
-      " [ -1.35665531e+01   3.14253163e+00  -1.36541986e+01   1.25704088e+01\n",
-      "   -2.31253090e+01  -2.53591061e+01   2.93409801e+00  -2.54861298e+01\n",
-      "    4.40520011e-02  -3.47658310e+01   3.81562004e+01]\n",
-      " [ -2.30536995e+01   2.22390556e+00  -2.29350185e+01  -9.91847706e+00\n",
-      "   -3.33911972e+01  -2.48398228e+01   2.12527490e+00  -2.46062050e+01\n",
-      "   -1.56058788e+01  -3.41488190e+01   4.52859001e+01]\n",
-      " [ -2.32107716e+01   2.56623268e+00  -2.33032379e+01   4.79562712e+00\n",
-      "   -3.22041359e+01  -2.95679111e+01   2.38997960e+00  -2.95499229e+01\n",
-      "   -5.55451584e+00  -3.95640526e+01   4.38306007e+01]\n",
-      " [ -2.52800274e+01   2.30528760e+00  -2.52066154e+01  -6.95603609e+00\n",
-      "   -3.50104866e+01  -2.56277275e+01   2.27624393e+00  -2.54669209e+01\n",
-      "   -9.43400574e+00  -4.02761154e+01   3.56255989e+01]]\n"
+      "[[-27.91104507   2.76453733 -27.87992096  -0.213149   -38.21137619\n",
+      "  -29.9101162    2.381284   -30.00784683 -11.2521534  -41.13591766\n",
+      "   43.9239006 ]\n",
+      " [-13.56655312   3.14253163 -13.65419865  12.57040882 -23.12530899\n",
+      "  -25.35910606   2.93409801 -25.48612976   0.044052   -34.76583099\n",
+      "   38.15620041]]\n"
      ]
     }
    ],
    "source": [
-    "print(train_feat[:5])  "
+    "print(train_feat[:2])  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +126,7 @@
        "(1604, 11)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +146,7 @@
        "dtype('float32')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
