--- a/notebooks/xgb_ensemble-all.ipynb
+++ b/notebooks/xgb_ensemble-all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,11 @@
       "'../features/incept_aug3_feat.pkl'\n",
       "'../features/incept_aug4_feat.pkl'\n",
       "'../features/other_feat.pkl'\n",
+      "'../features/other_model_gbrt.pkl'\n",
+      "'../features/other_model_lgb.pkl'\n",
+      "'../features/other_model_lr.pkl'\n",
+      "'../features/other_model_rf.pkl'\n",
+      "'../features/other_model_xgb.pkl'\n",
       "'../features/resnet_1_feat.pkl'\n",
       "'../features/resnet_aug1_feat.pkl'\n",
       "'../features/resnet_aug1_fold8_feat.pkl'\n",
@@ -72,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1604, 56) (8424, 56) (1604,)\n"
+      "(1604, 61) (8424, 61) (1604,)\n"
      ]
     }
    ],
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +152,7 @@
     "        watchlist = [(d_train, 'train'), (d_valid, 'valid')]\n",
     "        # train model\n",
     "        m = xgb.train(params, d_train, 500, watchlist, \n",
-    "                        early_stopping_rounds=30,\n",
+    "                        early_stopping_rounds=20,\n",
     "                        verbose_eval=1000)\n",
     "        \n",
     "        # cal val loss\n",
@@ -191,49 +196,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.637226\tvalid-logloss:0.640819\n",
+      "[0]\ttrain-logloss:0.636568\tvalid-logloss:0.640017\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[106]\ttrain-logloss:0.05565\tvalid-logloss:0.160475\n",
+      "[133]\ttrain-logloss:0.043002\tvalid-logloss:0.156956\n",
       "\n",
-      "[0]\ttrain-logloss:0.637991\tvalid-logloss:0.64016\n",
+      "[0]\ttrain-logloss:0.636779\tvalid-logloss:0.64116\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[139]\ttrain-logloss:0.046233\tvalid-logloss:0.155309\n",
+      "[64]\ttrain-logloss:0.086304\tvalid-logloss:0.160781\n",
       "\n",
-      "[0]\ttrain-logloss:0.638054\tvalid-logloss:0.638957\n",
+      "[0]\ttrain-logloss:0.6381\tvalid-logloss:0.64013\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[82]\ttrain-logloss:0.073214\tvalid-logloss:0.164798\n",
+      "[69]\ttrain-logloss:0.079784\tvalid-logloss:0.156364\n",
       "\n",
-      "local average valid loss 0.164491653931 val loss std 0.00222371750435\n",
+      "local average valid loss 0.159644751677 val loss std 0.00118340946042\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.014898\n",
-      "1  4023181e    0.973667\n",
-      "2  b20200e4    0.032781\n",
-      "3  e7f018bb    0.997836\n",
-      "4  4371c8c3    0.360779\n",
+      "0  5941774d    0.018320\n",
+      "1  4023181e    0.952627\n",
+      "2  b20200e4    0.057359\n",
+      "3  e7f018bb    0.996367\n",
+      "4  4371c8c3    0.363661\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.014824\n",
-      "1  4023181e    0.973603\n",
-      "2  b20200e4    0.032537\n",
-      "3  e7f018bb    0.997847\n",
-      "4  4371c8c3    0.360011\n"
+      "0  5941774d    0.018379\n",
+      "1  4023181e    0.952710\n",
+      "2  b20200e4    0.057526\n",
+      "3  e7f018bb    0.996373\n",
+      "4  4371c8c3    0.364223\n"
      ]
     }
    ],
@@ -243,165 +248,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637974\tvalid-logloss:0.642246\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[91]\ttrain-logloss:0.071796\tvalid-logloss:0.162532\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637771\tvalid-logloss:0.639782\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[89]\ttrain-logloss:0.076378\tvalid-logloss:0.139515\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637343\tvalid-logloss:0.639148\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[67]\ttrain-logloss:0.088657\tvalid-logloss:0.182237\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638715\tvalid-logloss:0.6402\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[120]\ttrain-logloss:0.057528\tvalid-logloss:0.137976\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638106\tvalid-logloss:0.640056\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[84]\ttrain-logloss:0.076952\tvalid-logloss:0.156988\n",
-      "\n",
-      "local average valid loss 0.158634848648 val loss std 0.0163733730446\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021602\n",
-      "1  4023181e    0.941287\n",
-      "2  b20200e4    0.036983\n",
-      "3  e7f018bb    0.997476\n",
-      "4  4371c8c3    0.309535\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021653\n",
-      "1  4023181e    0.941346\n",
-      "2  b20200e4    0.035380\n",
-      "3  e7f018bb    0.997517\n",
-      "4  4371c8c3    0.315288\n"
-     ]
-    }
-   ],
+   "execution_count": 70,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "cv_test(5,42,True)"
+    "#cv_test(5,42,True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0]\ttrain-logloss:0.637348\tvalid-logloss:0.639638\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[131]\ttrain-logloss:0.053228\tvalid-logloss:0.173151\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638628\tvalid-logloss:0.639263\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[131]\ttrain-logloss:0.055261\tvalid-logloss:0.159666\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638601\tvalid-logloss:0.641489\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[119]\ttrain-logloss:0.060684\tvalid-logloss:0.148\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638396\tvalid-logloss:0.638139\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[230]\ttrain-logloss:0.028998\tvalid-logloss:0.097023\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637836\tvalid-logloss:0.640585\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[45]\ttrain-logloss:0.118542\tvalid-logloss:0.201026\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638405\tvalid-logloss:0.638111\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[108]\ttrain-logloss:0.06979\tvalid-logloss:0.148082\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637826\tvalid-logloss:0.640632\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[143]\ttrain-logloss:0.051037\tvalid-logloss:0.158598\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638604\tvalid-logloss:0.638487\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[113]\ttrain-logloss:0.066151\tvalid-logloss:0.119007\n",
-      "\n",
-      "[0]\ttrain-logloss:0.637381\tvalid-logloss:0.640217\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[75]\ttrain-logloss:0.088903\tvalid-logloss:0.163556\n",
-      "\n",
-      "[0]\ttrain-logloss:0.638129\tvalid-logloss:0.637242\n",
-      "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
-      "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
-      "Stopping. Best iteration:\n",
-      "[74]\ttrain-logloss:0.090895\tvalid-logloss:0.149874\n",
-      "\n",
-      "local average valid loss 0.155968583582 val loss std 0.027117479142\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.022256\n",
-      "1  4023181e    0.958344\n",
-      "2  b20200e4    0.031333\n",
-      "3  e7f018bb    0.998115\n",
-      "4  4371c8c3    0.307578\n",
-      "         id  is_iceberg\n",
-      "0  5941774d    0.021033\n",
-      "1  4023181e    0.960039\n",
-      "2  b20200e4    0.028916\n",
-      "3  e7f018bb    0.998280\n",
-      "4  4371c8c3    0.311840\n"
-     ]
-    }
-   ],
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "cv_test(10,42,True)"
+    "#cv_test(10,42,True)"
    ]
   }
  ],
