--- a/notebooks/xgb_ensemble.ipynb
+++ b/notebooks/xgb_ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +44,11 @@
       "'../features/incept_aug3_feat.pkl',\n",
       "'../features/incept_aug4_feat.pkl',\n",
       "'../features/other_feat.pkl',\n",
+      "'../features/other_model_gbrt.pkl',\n",
+      "'../features/other_model_lgb.pkl',\n",
+      "'../features/other_model_lr.pkl',\n",
+      "'../features/other_model_rf.pkl',\n",
+      "'../features/other_model_xgb.pkl',\n",
       "'../features/resnet_1_feat.pkl',\n",
       "'../features/resnet_aug1_feat.pkl',\n",
       "'../features/resnet_aug1_fold8_feat.pkl',\n",
@@ -72,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -80,67 +85,71 @@
      "output_type": "stream",
      "text": [
       "../features/cnn_1_aug1_feat.pkl\n",
-      "../features/cnn_1_aug_rescale_preprocess_feat.pkl\n",
-      "../features/cnn_1_aug_skimage_preprocess_feat.pkl\n",
+      "../features/cnn_1_aug_1_fold8_feat.pkl\n",
       "../features/cnn_1_feat.pkl\n",
-      "../features/cnn_2_aug_rescale_preprocess_feat.pkl\n",
-      "../features/cnn_3_aug_skimage_preprocess_feat.pkl\n",
-      "../features/cnn_4_aug1_feat.pkl\n",
-      "../features/cnn_5_aug_skimage_preprocess_feat.pkl\n",
-      "../features/incept_aug1_feat.pkl\n",
       "../features/other_feat.pkl\n",
-      "../features/resnet_aug1_feat.pkl\n",
-      "../features/vgg_aug1_feat.pkl\n",
-      "../features/vgg_aug1_new_feat.pkl\n",
-      "../features/xception_aug1_feat.pkl\n",
-      "(1604, 24) (8424, 24) (1604,)\n"
+      "../features/other_model_gbrt.pkl\n",
+      "../features/other_model_lgb.pkl\n",
+      "../features/other_model_lr.pkl\n",
+      "../features/other_model_rf.pkl\n",
+      "../features/other_model_xgb.pkl\n",
+      "(1604, 19) (8424, 19) (1604,)\n"
      ]
     }
    ],
    "source": [
     "choose_fl = [\n",
     " '../features/cnn_1_aug1_feat.pkl',\n",
-    "  '../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
-    "  '../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
-    "  '../features/cnn_1_feat.pkl',\n",
-    "#  '../features/cnn_2_aug1_feat.pkl',\n",
-    " '../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
+    " '../features/cnn_1_aug_1_fold8_feat.pkl',\n",
+    "# '../features/cnn_1_aug_rescale_preprocess_feat.pkl',\n",
+    "# '../features/cnn_1_aug_skimage_denoise_feat.pkl',\n",
+    "# '../features/cnn_1_aug_skimage_preprocess_feat.pkl',\n",
+    " '../features/cnn_1_feat.pkl',\n",
+    "# '../features/cnn_2_aug1_feat.pkl',\n",
+    "# '../features/cnn_2_aug_1_fold8_feat.pkl',\n",
+    "# '../features/cnn_2_aug_denoise_preprocess_feat.pkl',\n",
+    "# '../features/cnn_2_aug_rescale_preprocess_feat.pkl',\n",
     "# '../features/cnn_2_aug_skimage_preprocess_feat.pkl',\n",
     "# '../features/cnn_2_feat.pkl',\n",
     "# '../features/cnn_3_aug1_feat.pkl',\n",
+    "# '../features/cnn_3_aug_1_fold8_feat.pkl',\n",
+    "# '../features/cnn_3_aug_denoise_preprocess_feat.pkl',\n",
     "# '../features/cnn_3_aug_rescale_preprocess_feat.pkl',\n",
-    "  '../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
-    "  '../features/cnn_4_aug1_feat.pkl',\n",
+    "# '../features/cnn_3_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_4_aug1_feat.pkl',\n",
     "# '../features/cnn_4_aug1_feat_add_early.pkl',\n",
+    "# '../features/cnn_4_aug_1_fold8_feat.pkl',\n",
+    "# '../features/cnn_4_aug_denoise_preprocess_feat.pkl',\n",
     "# '../features/cnn_4_aug_rescale_preprocess_feat.pkl',\n",
     "# '../features/cnn_4_aug_skimage_preprocess_feat.pkl',\n",
     "# '../features/cnn_5_aug1_feat.pkl',\n",
+    "# '../features/cnn_5_aug_1_fold8_feat.pkl',\n",
+    "# '../features/cnn_5_aug_denoise_preprocess_feat.pkl',\n",
     "# '../features/cnn_5_aug_rescale_preprocess_feat.pkl',\n",
-    " '../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
+    "# '../features/cnn_5_aug_skimage_preprocess_feat.pkl',\n",
     "# '../features/incept_1_feat.pkl',\n",
-    " '../features/incept_aug1_feat.pkl',\n",
-    "#    '../features/incept_aug1_fold8_feat.pkl',\n",
+    "# '../features/incept_aug1_feat.pkl',\n",
+    "# '../features/incept_aug1_fold8_feat.pkl',\n",
     "# '../features/incept_aug2_feat.pkl',\n",
     "# '../features/incept_aug3_feat.pkl',\n",
     "# '../features/incept_aug4_feat.pkl',\n",
-    " '../features/other_feat.pkl',\n",
+    "'../features/other_feat.pkl',\n",
+    "'../features/other_model_gbrt.pkl',\n",
+    "'../features/other_model_lgb.pkl',\n",
+    "'../features/other_model_lr.pkl',\n",
+    "'../features/other_model_rf.pkl',\n",
+    "'../features/other_model_xgb.pkl',\n",
     "# '../features/resnet_1_feat.pkl',\n",
-    " '../features/resnet_aug1_feat.pkl',\n",
-    "#    '../features/resnet_aug1_fold8_feat.pkl',\n",
+    "# '../features/resnet_aug1_feat.pkl',\n",
+    "# '../features/resnet_aug1_fold8_feat.pkl',\n",
     "# '../features/resnet_aug2_feat.pkl',\n",
     "# '../features/resnet_aug3_feat.pkl',\n",
     "# '../features/resnet_aug4_feat.pkl',\n",
     "# '../features/vgg16_1_feat.pkl',\n",
-    "  '../features/vgg_aug1_feat.pkl',\n",
-    "#    '../features/vgg_aug1_fold8_feat.pkl',\n",
-    " '../features/vgg_aug1_new_feat.pkl',\n",
-    " '../features/xception_aug1_feat.pkl',\n",
-    "    \n",
-    "#     '../features/cnn_1_aug_1_fold8_feat.pkl',\n",
-    "#     '../features/cnn_2_aug_1_fold8_feat.pkl',\n",
-    "#     '../features/cnn_3_aug_1_fold8_feat.pkl',\n",
-    "#     '../features/cnn_4_aug_1_fold8_feat.pkl',\n",
-    "#     '../features/cnn_5_aug_1_fold8_feat.pkl',\n",
+    "# '../features/vgg_aug1_feat.pkl',\n",
+    "# '../features/vgg_aug1_fold8_feat.pkl',\n",
+    "# '../features/vgg_aug1_new_feat.pkl',\n",
+    "# '../features/xception_aug1_feat.pkl',\n",
     "]\n",
     "\n",
     "def load_x_y():\n",
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +216,7 @@
     "        watchlist = [(d_train, 'train'), (d_valid, 'valid')]\n",
     "        # train model\n",
     "        m = xgb.train(params, d_train, 500, watchlist, \n",
-    "                        early_stopping_rounds=30,\n",
+    "                        early_stopping_rounds=20,\n",
     "                        verbose_eval=1009)\n",
     "        \n",
     "        # cal val loss\n",
@@ -251,47 +260,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
+   "execution_count": 147,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\ttrain-logloss:0.638291\tvalid-logloss:0.641754\n",
+      "[0]\ttrain-logloss:0.638805\tvalid-logloss:0.640971\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[148]\ttrain-logloss:0.057178\tvalid-logloss:0.147421\n",
+      "[118]\ttrain-logloss:0.082436\tvalid-logloss:0.167664\n",
       "\n",
-      "[0]\ttrain-logloss:0.640175\tvalid-logloss:0.641784\n",
+      "[0]\ttrain-logloss:0.638837\tvalid-logloss:0.640873\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[148]\ttrain-logloss:0.057513\tvalid-logloss:0.164196\n",
+      "[71]\ttrain-logloss:0.109325\tvalid-logloss:0.170634\n",
       "\n",
-      "[0]\ttrain-logloss:0.638911\tvalid-logloss:0.641074\n",
+      "[0]\ttrain-logloss:0.639408\tvalid-logloss:0.640373\n",
       "Multiple eval metrics have been passed: 'valid-logloss' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-logloss hasn't improved in 30 rounds.\n",
+      "Will train until valid-logloss hasn't improved in 20 rounds.\n",
       "Stopping. Best iteration:\n",
-      "[82]\ttrain-logloss:0.086634\tvalid-logloss:0.1604\n",
+      "[57]\ttrain-logloss:0.117396\tvalid-logloss:0.18286\n",
       "\n",
-      "local average valid loss 0.158617205767 val loss std 0.0074899943135\n",
+      "local average valid loss 0.175727170007 val loss std 0.00760964415571\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.011994\n",
-      "1  4023181e    0.942573\n",
-      "2  b20200e4    0.261456\n",
-      "3  e7f018bb    0.998141\n",
-      "4  4371c8c3    0.744964\n",
+      "0  5941774d    0.023938\n",
+      "1  4023181e    0.945232\n",
+      "2  b20200e4    0.573293\n",
+      "3  e7f018bb    0.995699\n",
+      "4  4371c8c3    0.839975\n",
       "         id  is_iceberg\n",
-      "0  5941774d    0.011845\n",
-      "1  4023181e    0.940308\n",
-      "2  b20200e4    0.258570\n",
-      "3  e7f018bb    0.998138\n",
-      "4  4371c8c3    0.737194\n"
+      "0  5941774d    0.023608\n",
+      "1  4023181e    0.943917\n",
+      "2  b20200e4    0.568508\n",
+      "3  e7f018bb    0.995742\n",
+      "4  4371c8c3    0.841686\n"
      ]
     }
    ],
@@ -301,10 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 148,
    "metadata": {
-    "collapsed": true,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -313,9 +323,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 149,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
